[tool.poetry]
name = "broxus_api_client"
version = "0.1.0"
description = "Set of API clients for Broxus APIs in Everscale"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
ujson = "^5.1.0"
httpx = { extras = ["http2"], version = "^0.22.0" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
